# otus-c-2024-12-aleksey_k

hw1/: archive.c  encodings.c
hw2/: CMakeLists.txt  weather_api.c
hw3/: README.MD
hw4/: clib-package.patch
hw5/: CMakeLists.txt  main.c
hw6/: CMakeLists.txt  main.c
hw6/include/: library.c  library.h
hw7/: CMakeLists.txt  main.asm  main.c
